[package]
name = "timed"
version = "0.1.0"
edition = "2018"
description = "Macros to time function execution"
license = "MIT OR Apache-2.0"
authors = ["Cedric Sanchez"]
readme = "README.md"
repository = "https://github.com/y2kappa/timed"
include = [
    "**/lib.rs",
    "**/tests/smoke.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.5"
proc-macro2 = "1.0.12"


[lib]
proc-macro = true