[package]
name = "tests"
version = "0.1.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timed = { path = "../timed" }
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0.58"
lazy_static = "1.4.0"

[dev-dependencies]
rusty-fork = "0.3.0"
