[package]
name = "timed"
version = "0.1.2"
edition = "2018"
description = "Macros to time function execution"
license = "MIT OR Apache-2.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/y2kappa/timed"
include = [
    "lib.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timed_proc_macros = "0.1.0"
lazy_static = "1.4.0"