[package]
name = "timed"
version = "0.2.1"
edition = "2018"
description = "Macros to time function execution"
license = "MIT OR Apache-2.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>", "Yoni Peleg <yoni@codota.com>"]
readme = "../README.md"
repository = "https://github.com/y2kappa/timed"

[dependencies]
timed_proc_macros = { version = "0.2.0" }
# timed_proc_macros = { path = "../timed_proc_macros" }
lazy_static = "1.4.0"
thiserror = "1.0.21"
prettytable-rs = "^0.8"
