[package]
name = "timed_proc_macros"
version = "0.1.1"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"
description = "Macros to time function execution (Macros)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/y2kappa/timed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.5"
proc-macro2 = "1.0.12"
syn = {version = "1.0.40", features=["full"]}
darling = "0.10.2"

[lib]
proc-macro = true